# MSE-ProgAlg-Labs

./: README.md
bank_mpi/: CMakeLists.txt
bank_mpi/src/: bank.c  bank.h  customer.c  customer.h  main.c
lab01-matrix/: code_assignment.c
